src/test/success/array_of_size.egern
var array = int[10]
var i = 0
while (i < len(array)) {
    array[i] = i
    i += 1
}

print(array[4])
print(len(array))
print(len(int[5]))
print(int[3][1])
print()


func concat(a: [int], b: [int]): [int] {
    var aLen = len(a)
    var c = int[aLen + len(b)]
    move(a, c, 0)
    move(b, c, aLen)
    return c
}

func move(src: [int], dest: [int], offset: int) {
    var i = 0
    while (i < len(src)) {
        dest[i + offset] = src[i]
        i += 1
    }
}

var a = [1, 2, 3]
var b = [4, 5, 6]
var c = concat(a, b)
print(len(c))
i = 0
while (i < len(c)) {
    print(c[i])
    i += 1
}
