src/test/fail/pass_shallower_array_fail.egern
func printElements(arr: [[int]]) {
    var length = len(arr)
    var i = 0
    while (i < length) {
        var innerLength = len(arr[i])
        var j = 0
        while (j < innerLength) {
            print(arr[i][j])
            j += 1
        }
        i += 1
    }
}

printElements([1, 2, 3])
